@@ -1,5 +1,11 @@
 2017-01-14  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* tp/Texinfo/Convert/Plaintext.pm (new_formatter): Call 
+	Texinfo::Convert::Paragraph::new directly instead of using 
+	Texinfo::Convert::Line or Texinfo::Convert::UnFilled.
+
+2017-01-14  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* tp/Texinfo/Convert/Plaintext.pm (_convert, _convert_element)
 	(_process_text): Remove debugging statements.
 
